--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<version>2.8.9</version>
 		</dependency>
 		
+		<!-- OpenPDF  para generar PDF -->
+		<dependency>
+			<groupId>com.github.librepdf</groupId>
+			<artifactId>openpdf</artifactId>
+			<version>1.3.30</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
