--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,18 @@
 			<version>1.3.30</version>
 		</dependency>
 		
+		<!-- GraphQL -->
+		<dependency>
+			<groupId>org.springframework.graphql</groupId>
+			<artifactId>spring-graphql-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-graphql</artifactId>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<build>
