--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,3 +36,12 @@ jobs:
 
       - name: Build with Maven and build JAR
         run: ./mvnw clean package -DskipTests
+
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=Sistema-club-backend
+            -Dsonar.organization=luisorihuela08
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
