--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,5 @@ jobs:
             -Dsonar.projectKey=Sistema-club-backend
             -Dsonar.organization=luisorihuela08
             -Dsonar.host.url=https://sonarcloud.io
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+        env:
+            SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
