--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,12 @@ name: Sistema-Club-Backend CI
 
 on:
   push:
-    branches: [main, dev]
+    branches:
+      - main
+      - dev
   pull_request:
-    branches: [dev]
+    branches: 
+      - dev
 
 jobs:
   build:
@@ -44,5 +47,6 @@ jobs:
             -Dsonar.projectKey=luisorihuela08_sistema-club-backend
             -Dsonar.organization=luisorihuela08
             -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.java.binaries=target
         env:
             SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
