--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,12 @@ jobs:
       - name: Build with Maven and build JAR
         run: ./mvnw clean package -DskipTests
 
-      - name: Analyze with SonarCloud (via Maven)
-        run: mvn verify sonar:sonar \
-          -Dsonar.projectKey=luisorihuela08_sistema-club-backend \
-          -Dsonar.organization=luisorihuela08 \
-          -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+      - name: SonarQubeCloud Scan
+        uses: SonarSource/sonarcloud-github-action@v2
+        with:
+          args: >
+            -Dsonar.projectKey=sistema-club-backend
+            -Dsonar.organization=luisorihuela08
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
