--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: SonarQubeCloud Scan
         run: |
-          ./mvnw verify sonar:sonar \
+          ./mvnw verify sonar:sonar -DskipTests \
             -Dsonar.projectKey=luisorihuela08_sistema-club-backend \
             -Dsonar.organization=luisorihuela08 \
             -Dsonar.host.url=${{ secrets.SONAR_HOST_URL }} \
