--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
 			<artifactId>spring-boot-starter-graphql</artifactId>
 		</dependency>
 		
+		<!-- Apache POI  para generar Excel -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+		
 		
 	</dependencies>
 
