--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,10 +36,11 @@ frontend:
 
 server:
   forward-headers-strategy: framework  # Habilita detección de protocolo HTTPS en producción    
-           
+
+
 springdoc:     
   swagger-ui:
-    path: /swagger-ui-custom.html 
+    path: /swagger.html
     
 ---
 spring:
@@ -72,7 +73,7 @@ frontend:
     
 server:
   forward-headers-strategy: framework  # Habilita detección de protocolo HTTPS en producción    
-
+  port: 5000
            
 springdoc:     
   swagger-ui:
